--- a/portfolio/web/src/layouts/Layout.astro
+++ b/portfolio/web/src/layouts/Layout.astro
@@ -1,19 +1,20 @@
 ---
-import { Image } from "astro:assets";
-import logo from "../assets/logo.webp";
-import favicon from "../assets/favicon.png";
+import favicon from "../assets/favicon.webp";
 import "@fortawesome/fontawesome-free/css/all.min.css";
-import type { SEOProps } from "../utils/seo";
+import type { SEOProps } from '../utils/seo';
 import Header from "../components/layout/Header.astro";
 import Footer from "../components/layout/Footer.astro";
-import PWAManager from "../components/common/PWAManager.astro";
+import PWAManager from '../components/common/PWAManager.astro';
 
 interface Props {
-    seo: SEOProps;
+  seo: SEOProps;
+  title?: string;
 }
 
-const { seo } = Astro.props;
-const { title, description, openGraph } = seo;
+const { seo, title: pageTitle } = Astro.props;
+const { description, openGraph } = seo;
+
+export let title: Props['title'];
 ---
 
 <!doctype html>
@@ -22,12 +23,12 @@ const { title, description, openGraph } = seo;
         <meta charset="UTF-8" />
         <meta name="description" content={description} />
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/png" href={favicon.src} />
+        <link rel="icon" type="image/webp" href={favicon.src} />
         <meta name="generator" content={Astro.generator} />
-        <title>{title}</title>
+        <title>{pageTitle ?? seo.title}</title>
 
         <!-- OpenGraph tags -->
-        <meta property="og:title" content={title} />
+        <meta property="og:title" content={pageTitle ?? seo.title} />
         <meta property="og:description" content={description} />
         {
             openGraph?.type && (
