--- a/portfolio/web/src/pages/about.astro
+++ b/portfolio/web/src/pages/about.astro
@@ -1,7 +1,7 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import { Image } from "astro:assets";
-import profilePic from "../assets/mathieu-piton.jpg";
+import profilePic from "../assets/mathieu-piton.webp";
 import { defaultSEO } from "../utils/seo";
 
 const seoData = {
